# STERO

./: .gitignore
reports/: LAB1.md  LAB2.md  lab2_6.md  report_lab5.md  report_navigation.md  report_project2.md
reports/lab4_report/: LAB4.md  errors_report.csv  node_list.txt  ros_doctor.txt  topic_list.txt
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/launch/: hello_moveit.launch.py  pal_gazebo.launch.py  tiago_gazebo.launch.py  tiago_nav_bringup.launch.py
src/hello_moveit/src/: hello_moveit.cpp
src/hello_moveit/worlds/: stero2.world
src/hello_stero/launch/: pal_gazebo.launch.py  tiago_gazebo.launch.py
src/lab3/: CMakeLists.txt  package.xml
src/lab3/config/rviz/: config.rviz
src/lab3/launch/: tiago_nav_bringup.launch.py
src/lab3/src/: hello_moveit.cpp  one_grasp.cpp  pick_and_place.cpp  show_all_grasps.cpp  show_selected_grasps.cpp  show_side_grasps.cpp
src/lab4/: CMakeLists.txt  package.xml
src/lab4/launch/: pal_gazebo.launch.py  square.launch.py  tiago_gazebo.launch.py
src/lab4/src/: main.cpp  square.cpp
src/lab5/: CMakeLists.txt  package.xml
src/lab5/config/rviz/: config.rviz  config2.rviz
src/lab5/launch/: pal_gazebo.launch.py  stero_navigation.launch.py  tiago_gazebo.launch.py  tiago_nav_bringup.launch.py
src/lab5/models/corridor/: model.sdf
src/lab5/src/: goal_navigator.cpp
src/lab5/worlds/: apartment.world
src/lab5/worlds/apartment/: map.pgm
src/lab5/worlds/corridor/: map.pgm
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/action/: Interface.action
src/project2/: package.xml  setup.py
src/project2/models/apartament/: model.config  model.sdf
src/project2/project2/: action_client.py  action_server.py
src/project2/worlds/: corridor.world
src/project2/worlds/apartment/: map.yaml
src/project2/worlds/corridor/: map.yaml
